--- a/client/src/i18n/locales/fr.json
+++ b/client/src/i18n/locales/fr.json
@@ -9,118 +9,129 @@
         "settings": "Paramètres"
     },
     "home": {
-        "subtitle": "Bienvenue dans Undercover, le jeu de déduction sociale ultime.\nLe but ? Démasquer les imposteurs avant qu'ils ne vous éliminent.\n\nLes Rôles :\n- Civils : Vous recevez tous le même mot secret. Trouvez qui a un mot différent !\n- Infiltrés : Vous avez un mot légèrement différent. Bluffez pour vous fondre dans la masse.\n- Mr. White : Vous n'avez AUCUN mot. Écoutez, déduisez et devinez le mot des Civils pour voler la victoire.\n\nÀ chaque tour, donnez un indice, débattez, et votez pour éliminer un suspect.\nFaites attention : vos amis ne sont peut-être pas ceux que vous croyez...",
+        "subtitle": "Bienvenue dans Undercover, le jeu de déduction sociale.\nLe but ? Démasquer les imposteurs avant qu'ils ne vous éliminent.\n\nLes Rôles :\n- Civils : Vous recevez tous le même mot secret. Trouvez qui a un mot différent !\n- Infiltrés : Vous avez un mot légèrement différent. Bluffez pour vous fondre dans la masse.\n- Mr. White : Vous n'avez AUCUN mot. Écoutez, déduisez et devinez le mot des Civils pour gagner.\n\nÀ chaque tour, donnez un indice, débattez, et votez pour éliminer un suspect.\nFaites attention : vos amis ne sont peut-être pas ceux que vous croyez...",
         "newGame": "Jouer",
         "playOnline": "Multijoueur",
-        "howToPlay": "Règles (pour les nuls)"
+        "howToPlay": "Règles du jeu",
+        "selectMode": "Sélectionnez un mode dans le menu du bas pour commencer."
+    },
+    "settings": {
+        "language": "Langue",
+        "languageDesc": "Choisissez votre langue préférée",
+        "theme": "Thème",
+        "themeDesc": "Personnaliser l'apparence de l'interface",
+        "light": "Clair",
+        "dark": "Sombre",
+        "system": "Système"
     },
     "setup": {
         "title": "Mise en place",
         "players": "Participants",
-        "addPlayer": "Ajouter une victime",
-        "playerName": "Nom de code",
-        "minPlayers": "Il faut au moins {{count}} joueurs pour s'amuser",
-        "settings": "Complot",
+        "addPlayer": "Ajouter un joueur",
+        "playerName": "Nom du joueur",
+        "minPlayers": "Joueurs requis : {{count}} minimum",
+        "settings": "Paramètres de la partie",
         "undercoverCount": "Nombre d'imposteurs",
         "mrWhiteCount": "Nombre de Mr. White",
-        "startGame": "Que la trahison commence !",
-        "removePlayer": "Virer ce joueur",
-        "duplicateName": "Original... mais déjà pris !"
+        "startGame": "Commencer la partie",
+        "removePlayer": "Retirer ce joueur",
+        "duplicateName": "Ce nom est déjà utilisé"
     },
     "players": {
-        "title": "Les Suspects",
-        "ready": "{{count}} menteurs prêts"
+        "title": "Liste des Joueurs",
+        "ready": "{{count}} joueurs prêts"
     },
     "reveal": {
         "passPhone": "Passez le téléphone à",
         "iam": "Je suis",
         "yourWord": "Ton mot secret",
-        "youAreMrWhite": "T'es Mr. White !",
-        "mrWhiteHint": "T'as aucune idée du mot. Ments comme un arracheur de dents !",
-        "memorize": "Mémorise ça et ne te fais pas griller",
-        "nextPlayer": "Au suivant !",
+        "youAreMrWhite": "Vous êtes Mr. White",
+        "mrWhiteHint": "Vous n'avez pas de mot secret.",
+        "memorize": "Mémorisez votre mot secret",
+        "nextPlayer": "Joueur suivant",
         "startDiscussion": "Place au débat",
-        "getReady": "Chut !",
-        "yourRole": "Ton identité",
-        "identify": "Touche pour voir ton destin",
-        "jesterHint": "Fais-toi éliminer par le vote pour gagner.",
-        "bodyguardHint": "Assure-toi que ta cible survive (et que les Civils gagnent)."
+        "getReady": "Préparez-vous",
+        "yourRole": "Votre Rôle",
+        "identify": "Appuyez pour révéler",
+        "jesterHint": "Votre objectif est d'être éliminé lors du vote.",
+        "bodyguardHint": "Votre objectif est de protéger votre cible."
     },
     "game": {
-        "title": "Débat Houleux",
+        "title": "Phase de jeu",
         "round": "Manche {{round}}",
-        "playersRemaining": "{{count}} survivants",
-        "eliminated": "Liquidés",
-        "vote": "Voter (Trahir)",
-        "votingPhase": "L'heure du Jugement",
-        "selectToEliminate": "Qui mérite de sortir ?",
-        "confirmElimination": "T'es sûr de vouloir virer ce type ?",
-        "eliminatePlayer": "Adieu {{name}} ?",
-        "cancel": "Pitié, non",
-        "confirm": "Dehors !",
-        "mrWhiteFound": "Mr. White s'est fait pecho !",
-        "mrWhiteGuessPrompt": "T'es cramé ! Dernière chance : devine le mot des Civils pour voler la victoire.",
-        "enterWordPlaceholder": "Tente un truc...",
-        "submitGuess": "C'est mon dernier mot",
+        "playersRemaining": "{{count}} joueurs restants",
+        "eliminated": "Éliminés",
+        "vote": "Voter",
+        "votingPhase": "Phase de vote",
+        "selectToEliminate": "Sélectionnez un joueur à éliminer",
+        "confirmElimination": "Confirmer l'élimination de ce joueur ?",
+        "eliminatePlayer": "Éliminer {{name}} ?",
+        "cancel": "Annuler",
+        "confirm": "Confirmer",
+        "mrWhiteFound": "Mr. White a été démasqué !",
+        "mrWhiteGuessPrompt": "Dernière chance : devinez le mot des Civils pour gagner.",
+        "enterWordPlaceholder": "Entrez le mot...",
+        "submitGuess": "Valider",
         "voteTitle": "Votre Vote",
         "alreadyVoted": "A voté",
         "voteConfirm": "Voter contre {{name}} ?",
         "voteAction": "VOTER"
     },
     "results": {
-        "title": "Verdict Final",
-        "civiliansWin": "Les Civils gagnent !",
-        "undercoversWin": "Les Infiltrés vous ont bien eus !",
-        "mrWhiteWins": "Mr. White a tout braqué !",
+        "title": "Résultats",
+        "civiliansWin": "Victoire des Civils",
+        "undercoversWin": "Victoire des Infiltrés",
+        "mrWhiteWins": "Victoire de Mr. White",
         "civilianWord": "Le vrai mot était",
         "undercoverWord": "Le mot des imposteurs",
-        "jesterWins": "Le Bouffon vous a bien eus !",
-        "playAgain": "On remet ça ?",
-        "backToHome": "Fuir à l'accueil",
-        "roles": "Les masques tombent"
+        "jesterWins": "Victoire du Bouffon",
+        "playAgain": "Rejouer",
+        "backToHome": "Retour à l'accueil",
+        "roles": "Révélation des rôles"
     },
     "multiplayer": {
         "title": "Multijoueur",
         "identity": "Identité",
-        "leaveRoom": "Déserter",
+        "leaveRoom": "Quitter le salon",
         "lobby": "Salle d'attente",
         "roomCode": "Code Secret",
-        "shareCode": "Donne ça à tes potes",
-        "players": "Complices",
-        "host": "CHEF",
-        "you": "(Toi)",
-        "waitingForHost": "Le chef prend son temps...",
+        "shareCode": "Partagez ce code avec les autres joueurs",
+        "players": "Joueurs",
+        "host": "HÔTE",
+        "you": "(Vous)",
+        "waitingForHost": "En attente de l'hôte...",
         "joinOrCreate": "Rejoindre ou Créer",
-        "enterName": "Ton petit nom",
-        "nickname": "Blase",
-        "yourName": "Comment on t'appelle ?",
+        "enterName": "Votre pseudo",
+        "nickname": "Pseudo",
+        "yourName": "Entrez votre pseudo",
         "createRoom": "Créer un salon",
-        "joinRoom": "Infiltrer un salon",
-        "joinGame": "S'incruster",
-        "cancel": "Laisse tomber",
+        "joinRoom": "Rejoindre un salon",
+        "joinGame": "Rejoindre la partie",
+        "cancel": "Annuler",
         "enterCode": "Code du salon",
-        "errorCreate": "Impossible de créer le salon. Le serveur fait la gueule ?",
-        "errorJoin": "Impossible d'entrer. T'es sûr du code ?"
+        "errorCreate": "Erreur lors de la création du salon.",
+        "errorJoin": "Impossible de rejoindre le salon. Vérifiez le code."
     },
     "common": {
         "back": "Retour",
         "continue": "Suivant",
-        "loading": "Chargement du complot...",
-        "error": "Oups, tout a pété"
+        "loading": "Chargement...",
+        "error": "Une erreur est survenue"
     },
     "roles": {
-        "civilian": "Civil (L'innocent)",
-        "undercover": "Infiltré (Le menteur)",
-        "mrWhite": "Mr. White (L'imposteur)",
+        "civilian": "Civil",
+        "undercover": "Infiltré",
+        "mrWhite": "Mr. White",
         "unknown": "???",
-        "jester": "Bouffon (Le Fou)",
-        "bodyguard": "Garde du Corps (Protecteur)",
+        "jester": "Bouffon",
+        "bodyguard": "Garde du Corps",
         "protect": "PROTÈGE"
     },
     "roleDescriptions": {
-        "undercover": "Se fond dans la masse. Ne te fais pas prendre !",
-        "mrWhite": "N'a pas de mot. Doit deviner le mot des Civils.",
-        "jester": "Veut se faire éliminer. Sois suspect !",
+        "civilian": "Vous faites partie de la majorité. Trouvez les intrus !",
+        "undercover": "Fondez-vous dans la masse et ne vous faites pas démasquer.",
+        "mrWhite": "Vous n'avez pas de mot. Devinez le mot des Civils.",
+        "jester": "Votre but est d'être éliminé. Soyez suspect.",
         "bodyguard": "Protège une cible secrète. Gagne si elle survit."
     }
 }
